fix background button on tablets

--- a/web/src/styles/styles.scss
+++ b/web/src/styles/styles.scss
@@ -111,6 +111,7 @@ nav.mainNav {
       display: block;
       margin: 0 0 0 auto;
       text-transform: uppercase;
+      background: none;
       &:hover {
         cursor: pointer;
         color: #c3c3c3;
